Poprawioną pierwszą część wstępu

--- a/dyplomWFAMarcinPietrzak.tex
+++ b/dyplomWFAMarcinPietrzak.tex
@@ -139,7 +139,31 @@ Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor i
 
 \subsection{Wprowadzenie}
 
-W ciągu ostatnich 10 lat rynek gogli VR zaczął się budzić na nowo dzięki jednemu z ojców założycieli firmy Oculus, Palmer Luckey. Wieku 16 lat zaczął budować swoje pierwsze gogle VR, a kilka lat później założył firmę Oculus i dzięki udanej zbiórce na Kickstarterze jego firma miała fundusze stworzyć swoje pierwsze sklepowe gogle. Po drodze firma wypuściła kilka prototypów dla deweloperów. Sama firma została przejęta przez Facebooka, dzisiaj znana jako Meta, za 2 miliardy dolarów w 2014 roku. Ich pierwsze komercyjne gogle, Oculus Rift, zostały wydane w 2016 roku i kosztowały na start 599\$. W 2017 roku z firmą pożegnał się Palmer Luckey, a obecnie zajmuję się firmą tworzącą technologię obronne. Natomiast kolejnymi komercyjnymi goglami Oculusa był Oculus Go wydanym w 2018 roku i kosztujące 199\$ za wersję z 32GB pamięci wbudowanej lub 249\$ za wersję z 64GB. Były to gogle all-in-one, czyli nie wymagały zewnętrznego sprzętu do działania. Rok później zostały wydane dwa nowe rodzaje gogli. Pierwszym był następca Oculusa Rifta, Oculus Rift S kosztującym 400\$. Drugimi goglami był natomiast następca Oculus Go, Oculus Quest, kosztujący na start 399\$ za wersję 64GB i 499\$ za wersję 128GB. Quest był dużą rewolucją dla firmy zaczynając od tego, że dzięki możliwości podłączenia gogli do PC, zaczęły one wypychać Oculus Rift S, a Facebook zaczął na ten moment tworzyć tylko gogle autonomiczne. 
+W ciągu ostatnich 10 lat rynek gogli VR zaczął się budzić na nowo dzięki jednemu z 
+ojców założycieli firmy Oculus, Palmer Luckey. Wieku 16 lat zaczął budować swoje 
+pierwsze gogle VR, a kilka lat później założył firmę Oculus i dzięki udanej zbiórce 
+na Kickstarterze jego firma miała fundusze stworzyć swoje pierwsze sklepowe gogle. 
+Po drodze firma wypuściła kilka prototypów dla deweloperów. Sama firma została 
+przejęta przez Facebooka, dzisiaj znana jako Meta, za 2 miliardy dolarów w 2014 
+roku. Ich pierwsze komercyjne gogle, Oculus Rift, zostały wydane w 2016 roku i 
+kosztowały na start 599 USD. W 2017 roku z firmą pożegnał się Palmer Luckey, a 
+obecnie zajmuję się firmą tworzącą technologię obronne. Natomiast kolejnymi 
+komercyjnymi goglami Oculusa był Oculus Go wydanym w 2018 roku jako sprzęt all-in-
+one, czyli nie wymagały zewnętrznych urządzeń czy przewodów do działania. Gogle 
+okazały się na tyle innowacyjne, dzięki braku potrzeby podłączania komputera czy 
+smartfonu, że już rok później firma Oculus wypuściła następcę, o którym za chwilę 
+Koszt gogli zaczynał się od 199 USD w dniu premiery. W kolejnym roku zostały wydane 
+dwa nowe rodzaje gogli. Pierwszym był następca Oculusa Rifta, czyli Oculus Rift S 
+kosztującym 400 USD. Podobnie jak jego poprzednik były stworzone zmyślą o PCVR. 
+Recenzentom sprzęt też nie przypadł do gustu, zarzucając mu zbyt małą ilość 
+innowacji od poprzedniej wersji. Inaczej było z drugim produktem, który wypuścili w 
+podobnym czasie czyli Oculus Quest. Cena premierowa zaczynała się od 399 USD. Quest 
+podobnie jak jego poprzednik nie wymagał żadnych dodatkowych urządzeń do działania. 
+Dzięki dość niskiej cenie, jak za możliwości które oferowały gogle, okazały się one 
+ogromnym sukcesem dla Oculusa na tyle ogromnym, że zaczęły one powoli wypychać 
+swojego brata Rift S z rynku, a gwoździem do trumny dla Rift S było ogłoszenie przez 
+Oculusa, że można będzie Questa podłączyć do PC i korzystać z nich jak Rift S. Sam 
+Oculus od tego momentu zaczął tworzyć tylko gogle autonomiczne. 
 
 \begin{figure}[!ht]%
 	\centering
@@ -162,22 +186,22 @@ W ciągu ostatnich 10 lat rynek gogli VR zaczął się budzić na nowo dzięki j
 \end{figure}
 
 
-W kolejnym roku, tj. 2020 wypuścili kolejne gogle Oculus Quest 2 w cenie 299\$ za
-wersje 64GB i 400\$ za wersję 256GB. Dzięki konkurencyjnej cenie i możliwością
-jakie dawał Quest 2 stały się najpopularniejszymi goglami na rynku. W ciągu
-ostatnich dwóch lat Oculus zmienił nazwę na Reality Labs, Facebook na Meta, a
-Oculus Quest 2 na Meta Quest 2. Obecnie Meta jest firmą próbującą stworzyć swój 
-pierwszy metavers. W ostatnich tygodniach wypuścili też gogle z myślą o 
-zastosowaniach biznesowym i dla metaversum, Meta Quest Pro, kosztujące 1500\$. Same 
+W kolejnym roku, tj. 2020 wypuścili kolejne gogle, czyli Oculus Quest 2 których 
+koszt zaczynał się od 299 USD. Dzięki jeszcze niższej cenie i lepszej mocy w 
+stosunku do poprzednika stały się najpopularniejszymi goglami na rynku. W ciągu 
+ostatnich dwóch lat Oculus zmienił nazwę na Reality Labs, Facebook na Meta, a Oculus 
+Quest 2 na Meta Quest 2. Obecnie Meta jest firmą próbującą stworzyć swój pierwszy 
+metavers. W ostatnich tygodniach wypuścili też gogle z myślą o zastosowaniach 
+biznesowym i dla metaversum, Meta Quest Pro, kosztujące 1500\$. Oczywiście same 
 gogle Meta nie są jedyne na rynku. Podczas boomu na rynku VR w 2016 zostały wydane 
 też inne gogle konkurencyjnych firm. Do największych należą HTC Vive, gogle wydane 
-przez HTC we współpracy z firmą Valve, jako główny konkurent Oculus Rifta, bo też 
-były tworzone z myślą o rynku PC. Kolejnymi goglami jest PlayStation VR, były to 
-gogle stworzone przez firmę Sony na ich konsolę PlayStation4. W latach 2016-2022 
-powstała co najmniej setka nowych gogli VR różnych firm, z czego największą 
-popularnością są rozwiązania od Mety\cite{popularnosc_gogli}. W 2021 roku zostało 
-sprzedanych 11 milionów sztuk urządzeń. Z czego 78\% były to Meta Quest 
-2\cite{ilosc_urzadzen}.
+przez HTC we współpracy z firmą Valve, jako główny konkurent Oculus Rifta, bo 
+podobnie jak Rift też były tworzone z myślą o rynku PC. Trochę inną drogo poszło 
+Sony tworząc PlayStation VR, były to gogle stworzone z myślą o konsoli PlayStation 
+4. Natomiast w latach 2016-2022 powstała co najmniej setka nowych gogli VR różnych 
+firm\cite{ilosc_urzadzen}, z czego największą popularnością są gogle od 
+Mety\cite{popularnosc_gogli}, w 2021 roku zostało sprzedanych 11 milionów sztuk 
+urządzeń. Z czego 78\% były to Meta Quest 2\cite{ilosc_urzadzen}.
 
 \begin{figure}[H]%
 \centering
@@ -189,12 +213,14 @@ sprzedanych 11 milionów sztuk urządzeń. Z czego 78\% były to Meta Quest
 \end{figure}  
 
 
-Rynek aplikacji z myślą o VR też się rozwinął w ciągu ostatnich lat. Firmy takie, 
-jak Epic czy Unity dodały do swoich silników wsparcie dla najpopularniejszych gogli 
-na rynku. Dzięki wparciu od dużych firm rozpoczął się wysyp aplikacji na gogle VR. W 
-oficjalnym sklepie Oculus jest obecnie dostępnych ponad 400 
-aplikacji\cite{liczba_gier_quest}, na Steam jest ich
-już ponad 4000\cite{liczba_gier_steam}. Dzięki wsparciu Oculus Quest na silniku 
+Rynek aplikacji z myślą o VR też się rozwinął w ciągu ostatnich lat. Firmy 
+produkujące silniki do gier takie, jak Epic czy Unity dodały do swoich silników 
+wsparcie VR. Dzięki wparciu od dużych firm rozpoczął się wysyp aplikacji na gogle 
+VR. W oficjalnym sklepie Oculus jest obecnie dostępnych ponad 400 
+aplikacji\cite{liczba_gier_quest}, na Steam jest ich już ponad 
+4000\cite{liczba_gier_steam}. Oczywiście sam sprzęt nie służy też do rozrywki. Może 
+być też wykorzystywany np. przez wojsko do tworzenia symulacji, czy przez artystów 
+do tworzenia dzieł sztuki. Sam dzięki wsparciu Oculus Questa na silniku 
 Unreal Engine 4 uznałem, że spróbuję swoich sił i spróbuję stworzyć projekt, galerii 
 modelów komputerowych, zainspirowany zajęciami na uczelni.
 
