--- a/dyplomWFAMarcinPietrzak.tex
+++ b/dyplomWFAMarcinPietrzak.tex
@@ -139,31 +139,7 @@ Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor i
 
 \subsection{Wprowadzenie}
 
-W ciągu ostatnich 10 lat rynek gogli VR zaczął się budzić na nowo dzięki jednemu z 
-ojców założycieli firmy Oculus, Palmer Luckey. Wieku 16 lat zaczął budować swoje 
-pierwsze gogle VR, a kilka lat później założył firmę Oculus i dzięki udanej zbiórce 
-na Kickstarterze jego firma miała fundusze stworzyć swoje pierwsze sklepowe gogle. 
-Po drodze firma wypuściła kilka prototypów dla deweloperów. Sama firma została 
-przejęta przez Facebooka, dzisiaj znana jako Meta, za 2 miliardy dolarów w 2014 
-roku. Ich pierwsze komercyjne gogle, Oculus Rift, zostały wydane w 2016 roku i 
-kosztowały na start 599 USD. W 2017 roku z firmą pożegnał się Palmer Luckey, a 
-obecnie zajmuję się firmą tworzącą technologię obronne. Natomiast kolejnymi 
-komercyjnymi goglami Oculusa był Oculus Go wydanym w 2018 roku jako sprzęt all-in-
-one, czyli nie wymagały zewnętrznych urządzeń czy przewodów do działania. Gogle 
-okazały się na tyle innowacyjne, dzięki braku potrzeby podłączania komputera czy 
-smartfonu, że już rok później firma Oculus wypuściła następcę, o którym za chwilę 
-Koszt gogli zaczynał się od 199 USD w dniu premiery. W kolejnym roku zostały wydane 
-dwa nowe rodzaje gogli. Pierwszym był następca Oculusa Rifta, czyli Oculus Rift S 
-kosztującym 400 USD. Podobnie jak jego poprzednik były stworzone zmyślą o PCVR. 
-Recenzentom sprzęt też nie przypadł do gustu, zarzucając mu zbyt małą ilość 
-innowacji od poprzedniej wersji. Inaczej było z drugim produktem, który wypuścili w 
-podobnym czasie czyli Oculus Quest. Cena premierowa zaczynała się od 399 USD. Quest 
-podobnie jak jego poprzednik nie wymagał żadnych dodatkowych urządzeń do działania. 
-Dzięki dość niskiej cenie, jak za możliwości które oferowały gogle, okazały się one 
-ogromnym sukcesem dla Oculusa na tyle ogromnym, że zaczęły one powoli wypychać 
-swojego brata Rift S z rynku, a gwoździem do trumny dla Rift S było ogłoszenie przez 
-Oculusa, że można będzie Questa podłączyć do PC i korzystać z nich jak Rift S. Sam 
-Oculus od tego momentu zaczął tworzyć tylko gogle autonomiczne. 
+W ciągu ostatnich 10 lat rynek gogli VR zaczął się budzić na nowo dzięki jednemu z ojców założycieli firmy Oculus, Palmer Luckey. Wieku 16 lat zaczął budować swoje pierwsze gogle VR, a kilka lat później założył firmę Oculus i dzięki udanej zbiórce na Kickstarterze jego firma miała fundusze stworzyć swoje pierwsze sklepowe gogle. Po drodze firma wypuściła kilka prototypów dla deweloperów. Sama firma została przejęta przez Facebooka, dzisiaj znana jako Meta, za 2 miliardy dolarów w 2014 roku. Ich pierwsze komercyjne gogle, Oculus Rift, zostały wydane w 2016 roku i kosztowały na start 599 USD. W 2017 roku z firmą pożegnał się Palmer Luckey, a obecnie zajmuję się firmą tworzącą technologię obronne. Natomiast kolejnym komercyjnym sprzętem Oculusa był Oculus Go wydanym w 2018 roku jako sprzęt all-in-one, czyli nie wymagały zewnętrznych urządzeń czy przewodów do działania. Gogle dzięki braku potrzeby podłączania komputera czy smartfonu, gogle okazały się ogromną innowacją na rynku sprzętu VR. Koszt gogli zaczynał się od 199 USD w dniu premiery. W kolejnym roku zostały wydane dwa nowe rodzaje gogli. Pierwszym był następca Oculusa Rifta, czyli Oculus Rift S kosztującym 400 USD. Podobnie jak jego poprzednik były stworzone zmyślą o PCVR. Recenzentom sprzęt też nie przypadł do gustu, zarzucając mu zbyt małą ilość innowacji od poprzedniej wersji. Inaczej było z drugim produktem, który wypuścili w podobnym czasie czyli Oculus Quest. Cena premierowa zaczynała się od 399 USD. Quest podobnie jak jego poprzednik nie wymagał żadnych dodatkowych urządzeń do działania. Dzięki dość niskiej cenie, jak za możliwości które oferowały gogle, okazały się one ogromnym sukcesem dla Oculusa na tyle ogromnym, że zaczęły one powoli wypychać swojego brata Rift S z rynku, a gwoździem do trumny dla Rift S było ogłoszenie przez Oculusa, że można będzie Questa podłączyć do PC i korzystać z nich jak Rift S. Sam Oculus od tego momentu zaczął tworzyć tylko gogle autonomiczne. 
 
 \begin{figure}[!ht]%
 	\centering
@@ -220,14 +196,12 @@ VR. W oficjalnym sklepie Oculus jest obecnie dostępnych ponad 400
 aplikacji\cite{liczba_gier_quest}, na Steam jest ich już ponad 
 4000\cite{liczba_gier_steam}. Oczywiście sam sprzęt nie służy też do rozrywki. Może 
 być też wykorzystywany np. przez wojsko do tworzenia symulacji, czy przez artystów 
-do tworzenia dzieł sztuki. Sam dzięki wsparciu Oculus Questa na silniku 
-Unreal Engine 4 uznałem, że spróbuję swoich sił i spróbuję stworzyć projekt, galerii 
-modelów komputerowych, zainspirowany zajęciami na uczelni.
+do tworzenia dzieł sztuki lub galerii modelów komputerowych.
 
 \subsection{Cel i zakres pracy}
 
 Głównym założeniem jest stworzenie aplikacji VR która przedstawi kilka wybranych
-przeze mnie modeli komputerowych w przystępny sposób, łącznie z częścią galerii w
+modeli komputerowych w przystępny sposób, łącznie z częścią galerii w
 której znajdować się będzie historia danego modelu i ciekawostki z nim związane.
 Gogle VR których używałem do testów to Oculus Quest pierwszej generacji,
 natomiast aplikację napisałem w Unreal Engine 4, ponieważ mogę w tym silniku
