--- a/dyplomWFAMarcinPietrzak.tex
+++ b/dyplomWFAMarcinPietrzak.tex
@@ -228,8 +228,8 @@ byłby możliwy do zrealizowania jeszcze 10 lat temu.
 \section{Warstwa Użytkowa}
 
 \subsection{Wygląd i Obsługa programu}
-{\color{blue}
-Program do uruchomienia wymaga gogli VR np. Oculus Quest i kontrolerów ruchowych. Można poruszać się po planszy na dwa sposoby. Pierwszy polega na użyciu lewego thumbsticka dzięki czemu można poruszać się płynnie po planszy, podczas poruszania się po planszy zmniejsza się obraz aby osoby które mają chorobę symulatorową\cite{choroba_vr} lepiej znosiły takie poruszanie się po poziomie. Drugi natomiast polega na teleportacji, po naciśnięciu przycisku B na prawy kontrolerze i wybraniu miejsca planszy gdzie chcemy się teleportować, jest to sposób poruszania się bardziej przyjazny dla osób z chorobą symulatorową.
+
+Aby uruchomić program potrzebną są gogle VR i kontrolery ruchowe, które są wspierane. W programie wspierane są gogle Oculus Quest i kontrolery Oculus Touch. Program podzielony jest na pokoje, gdzie każdy pokój różni się umieszczonym w nim modelem i możliwymi interakcjami z modelem. Po poziomach można poruszać się na dwa sposoby. Pierwszy sposób wymaga użycia lewego drążka. Dzięki odpowiedniemu wychyleniu drążka można poruszać się w odpowiednie miejsce po pokoju. Jednak przez taki sposób poruszania się niektóre osoby mogą nabawić się choroby symulatorowej\cite{choroba_vr}, aby zmniejszyć szansę jej wystąpienia został zastosowany efekt zwany widzeniem tunelowym. Polega on na zmniejszeniu wielkości widocznego obrazu kiedy poruszamy się po planszy. Im mamy większą prędkość tym efekt jest mocniejszy. Drugi sposób poruszania się polega na teleportacji w inne miejsce na planszy. Po kliknięciu przycisku B na prawym kontrolerze pojawi się kółko informujące nas, że po zwolnieniu przycisku teleportujemy się tam. Ten sposób poruszania się jest bardziej wygodny dla osób z chorobą symulatorową.
 
 \begin{figure}[!ht]%
 	\centering
@@ -249,7 +249,7 @@ Program do uruchomienia wymaga gogli VR np. Oculus Quest i kontrolerów ruchowyc
 \caption{Różny rodzaj poruszania się w programie}
 \label{ref:ref}
 \end{figure}
-}
+
 \subsection{Cześć Galerii Programu}
 {\color{blue}
 W tej części można poczytać i dowiedzieć się trochę o danym modelu. Swoim wyglądem przypomina to galerię obrazów, gdzie osoba podchodzi do danej ciekawostki i może ją przeczytać.
