--- a/dyplomWFAMarcinPietrzak.tex
+++ b/dyplomWFAMarcinPietrzak.tex
@@ -1021,25 +1021,18 @@ Ostatnie co zostało stworzone do projektu to pokoje (mapy) na których zostały
 Elementy pokoju zostały stworzone w programie do grafiki 3D Blender3D. Jest to darmowy program z którego w łatwy sposób można wrzucać stworzone tam meshe do UE4.
 Natomiast ściany, podłoga i sufit zostały stworzone przy pomocy meshy znajdujących się już w silniku UE4.
 
-{\color{red}
-Obsługa kontrolerów została stworzona przy użyciu zasad dziedziczenia z klasy bazowej i metod wirtualnych. Każdy kontroler dziedziczy z klasy bazowej metody odpowiedzialne za zachowanie spustów, gripa i drążka. W zależności co było potrzebne do osiągnięcia w modelu zachowania poszczególnych funkcji się różnią, a dzięki zasadą dziedziczenia, mogę je wywołać w tych samych miejscach w kodzie, podmieniając tylko klasy kontrolerów.
-}
-
-{\color{purple}
-Tutaj napisz informację z funkcji do teleportacji. Potem dodaj indormację o kontrolerach ruchu, a dokładnie ich klasach. Na końcu napisz krótko o poziomach z jednym poziomem który został storzony. co się znajduje i jak go zrobiłeś. Na koncu przeredaguj i wyślij matyce do poprawy. Potem popraw pierwsze trzy rozdziały i w 4 zrób poprawki których potrzebują
-}
-\newpage
 \section{Wnioski}
 
 
-Podczas pracy nad projektem, jako osoba go robiąca doszedłem do kilku wniosków na bazie mojego doświadczenia z tego wynikająca:
+Stworzenie projektu programu w VR skłania do kilku wniosków:
 
 \begin{itemize}
-\item Najlepsza cecha blueprintów: pozwala nam zacząć kodować logikę gier wideo bez żadnej wiedzy programistycznej. Najgorsza cecha blueprintów: pozwala nam zacząć kodować logikę gier wideo bez żadnej wiedzy programistycznej.
 \item Dobrze napisana dokumentacja do programu to rzadkość, a UE4 niestety takowej dobrze napisanej nie posiada.
 \item Do projektowania grafiki 3D trzeba mięć odpowiednie umiejętności i czas by stworzyć coś ładnego, a zarazem optymalnego dla VR.
-\item Wybrany temat nauczył mnie tworzenia ciekawych modeli, które w przyszłości można rozbudować o nowe funkcje lub dodać kolejne modele do galerii.
-\item Tworzenie projektu z myślą o VR uczy prób pisania optymalnego kodu modeli, aby te podczas ich oglądania nie powodowały choroby symulatorowej spowodowanej niską ilością klatek na sekundę.
+\item Wybrany temat nauczył tworzenia kilku modeli komputerowych, które w przyszłości można rozbudować o nowe funkcje lub dodać jeszcze inne modele do galerii.
+\item Pisanie projektu z myślą o VR uczy myślenia by porjektować grę w taki sposób, aby nie wywołać u osób korzystających z niego choroby symulatorowej.
+\item Unreal Engine pozwala wszystko napisać przy pomocy blueprintów, co dla osób mało technicznych może być zaletą, lecz w rozbudowanym projekcie BP mogą powodować problemy, które nie występują w C++
+\item Tworzenie projektu VR może być dla niektórych męczące, przykładowo może to być spowodowane ciągłym zdejmowaniem i zakładaniem gogli.
 \end{itemize}
 
 \newpage
